fix voucher on and spct status 0